Fix for PJAX modals not resetting between loads; adjust datepicker z-index

--- a/app/assets/stylesheets/application/overrides/datepicker.scss
+++ b/app/assets/stylesheets/application/overrides/datepicker.scss
@@ -4,7 +4,7 @@
   padding: 0;
   // Above header
   // Use Important flag because z-index is strangely added inline by library
-  z-index: $zIndex-10+50 !important;
+  z-index: $zIndex-10+10 !important;
 }
 
 .datepicker input {
